Fix button on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -83,6 +83,10 @@ body {
         text-align: center;
     }
     .section {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
         h1 {
             font-size: 7vw;
             font-weight: 400;
@@ -90,14 +94,13 @@ body {
             line-height: 1;
         }
         p {
-            padding: 0;
-            font-size: 24px;
+            padding-bottom: 36px;
+            margin: 0;
+            font-size: 22px;
         }
         .text {
-            padding: 40px 0;
+            padding: 36px 0;
             max-width: 600px;
-        }
-        a {
         }
     }
 }
@@ -317,18 +320,6 @@ p {
                 max-width: 600px;
                 font-size: 18px;
             }
-            a {
-                font-size: 18px;
-                font-weight: 400;
-                text-decoration: none;
-                color: white;
-                background: $color;
-                padding: 20px 40px;
-                transition-duration: .4s;
-                &:hover {
-                    background: #000;
-                }
-            }
         }
     }
     .page-body {
@@ -339,5 +330,17 @@ p {
         font-size: 60px;
         font-weight: 400;
         text-decoration: none;
+    }
+}
+
+
+@media screen and (max-height: 750px) {
+    .hero {
+        height: auto;
+        width: 100%;
+        padding: 120px 40px 80px 40px;
+        h1 {
+
+        }
     }
 }
